fix styling on small screens

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -5,3 +5,14 @@ img {
   width: 120px;
   height: 180px;
 }
+
+.w-20 { width: 20% !important;}
+.w-80 { width: 80% !important; }
+
+.m-top {
+  margin-top: 300px;
+}
+
+@media (max-width: 600px) {
+  .m-top { margin-top: 140px; }
+ }
